--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "ai": "^5.0.82",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "katex": "^0.16.25",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-katex": "^3.1.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "wikipedia": "^2.4.1"
@@ -30,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-katex": "^3.0.4",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
